# imgdd

./: .deepsource.toml  .gitignore  Cargo.toml  README.md  __init__.py  build.rs  codecov.yml  imgdd.pyi  latest  mkdocs.yml  pyproject.toml  versions.json
.github/: FUNDING.yml
.github/actions-rs/: grcov.yml
.github/workflows/: benchmark.yml  coverage.yml  docs-python.yml  integration.yml  publish-python.yml  publish_python.yml  publish_rust.yml  release-python.yml  release-rust.yml  rust.yml  test.yml
0.1.0-stage/: 404.html  index.html  search.html  sitemap.xml
0.1.0-stage/benches/: index.html
0.1.0-stage/dev/: index.html
0.1.0-stage/imgdd/: index.html
0.1.0-stage/quickstart/: index.html
0.1.0-stage/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/benches/: index.html
0.1.3/dev/: index.html
0.1.3/imgdd/: index.html
0.1.3/quickstart/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/benches/: index.html
0.1.4/dev/: index.html
0.1.4/imgdd/: index.html
0.1.4/quickstart/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.5/benches/: index.html
0.1.5/dev/: index.html
0.1.5/imgdd/: index.html
0.1.5/quickstart/: index.html
0.1.5/search/: search_index.json
benches/: dedupe_bench.rs  img_hash_bench.rs  imgdd_bench.rs  py_bench.py  rust_bench.rs
crates/corelib/: Cargo.toml
crates/corelib/benches/: corelib_benches.rs
crates/corelib/src/: dedupe.rs  hashing.rs  normalize.rs  validate.rs
crates/corelib/tests/: dedupe_tests.rs  hashing_tests.rs  normalize_tests.rs  validate_tests.rs
crates/imgdd/: Cargo.toml  README.md
crates/imgdd/benches/: rust_benches.rs
crates/imgdd/src/: lib.rs
crates/imgdd/tests/: rust_tests.rs
crates/imgddcore/: Cargo.toml
crates/imgddcore/benches/: core_benches.rs
crates/imgddcore/src/: dedupe.rs  hashing.rs  lib.rs  utils.rs
crates/imgddcore/tests/: dedupe_tests.rs  utils_tests.rs  validate_tests.rs
crates/imgddpy/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
crates/imgddpy/docs/: benches.md  index.md
crates/imgddpy/src/: lib.rs
crates/python/: Cargo.toml  imgdd.pyi  mkdocs.yml  pyproject.toml  tox.ini
crates/python/benches/: py_bench.py  requirements.txt
crates/python/docs/: benches.md  dev.md  imgdd.md  index.md  quickstart.md  usage.md
crates/python/src/: lib.rs
crates/python/tests/: test_imgdd.py
crates/python/tests/benchmark/: benchmark_imgdd.py  test_imgdd_benchmarks.py
crates/python/tests/unit/: test_imgdd.py
crates/rust/: Cargo.toml
crates/rust/benches/: rust_benches.rs
crates/rust/src/: lib.rs
crates/rust/tests/: rust_tests.rs
docs/: index.md  usage.md
docs/api/: python.md  rust.md
src/: dedupe.rs  hashing.rs  image_hash.rs  lib.rs  logger.rs  main.rs  normalize.rs  validate.rs
tests/: dedupe_tests.rs  image_hash_tests.rs  normalize_tests.rs  utils_tests.rs  validate_tests.rs
