[package]
name = "imgdd"
version = "0.1.0"
edition = "2021"
description = "Rust backend for imgdd"
license = "GNU GPLv3"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py37"] }
image = "0.25.5"
rayon = "1.10.0"
walkdir = "2.3"
anyhow = "1.0.95"
log = "0.4.22"
criterion = { version = "0.5.1", optional = true }

[features]
default = []
benchmark = ["criterion"]

[lib]
name = "imgdd"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "imgdd_bench"
path = "benches/imgdd_bench.rs"
harness = false
required-features = ["benchmark"]