[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GNU GPLv3"
authors = ["Aaron Stopher <aaron.stopher@gmail.com>"]

[workspace.dependencies]
image = "0.25.5"
rayon = "1.10.0"
walkdir = "2.3"
anyhow = "1.0.95"
log = "0.4.25"
tempfile = "3.5"