[package]
name = "corelib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true


[dependencies]
image.workspace = true
rayon.workspace = true
walkdir.workspace = true
anyhow.workspace = true
log.workspace = true
rustdct.workspace = true
criterion = { package = "codspeed-criterion-compat", version = "2.7.1", optional = true }

[dev-dependencies]
tempfile.workspace = true


[features]
default = []
benchmark = ["criterion"]
testing = []


[[bench]]
name = "corelib_benches"
path = "benches/corelib_benches.rs"
harness = false
required-features = ["benchmark"]