[package]
name = "imgdd"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md" 

[dependencies]
imgddcore = { path = "../imgddcore", version = "0.1.2" }
image.workspace = true
anyhow.workspace = true
criterion = { version = "0.5.1", optional = true }


[dev-dependencies]
tempfile.workspace = true

[features]
default = []
benchmark = ["criterion"]
testing = []


[lib]
name = "imgdd"
crate-type = ["rlib"]


[[bench]]
name = "rust_benches"
path = "benches/rust_benches.rs"
harness = false
required-features = ["benchmark"]