[package]
name = "imgddcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true


[dependencies]
image.workspace = true
rayon.workspace = true
walkdir.workspace = true
anyhow.workspace = true
log.workspace = true
rustdct.workspace = true
criterion = { package = "codspeed-criterion-compat", version = "2.7.1", optional = true }

[dev-dependencies]
tempfile.workspace = true


[features]
default = []
benchmark = ["criterion"]
testing = []


[[bench]]
name = "imgdd_core_benches"
path = "benches/imgdd_core_benches.rs"
harness = false
required-features = ["benchmark"]