[package]
name = "imgddpy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
corelib = { path = "../corelib" }
pyo3 = { version = "0.23", features = ["extension-module"] }
image.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "imgddpy"
crate-type = ["cdylib"]