[package]
name = "imgddpy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
corelib = { path = "../corelib", version = "0.1.0" }
pyo3 = { version = "0.23", features = ["extension-module"] }
image.workspace = true


[lib]
name = "imgddpy"
crate-type = ["cdylib"]