[package]
name = "imgdd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true


[dependencies]
corelib = { path = "../corelib", version = "0.1.0" }
image.workspace = true
anyhow.workspace = true
criterion = { version = "0.5.1", optional = true }


[dev-dependencies]
tempfile.workspace = true

[features]
default = []
benchmark = ["criterion"]
testing = []


[lib]
name = "imgdd"
crate-type = ["rlib"]


[[bench]]
name = "rust_benches"
path = "benches/rust_benches.rs"
harness = false
required-features = ["benchmark"]